The animation is not played to the end #46381

Closed
opened 2015-10-05 14:04:22 +02:00 by Ivan · 13 comments

Animation camera rotation should play a frame from 0 to 10, but the animation stops at 9 frame. The problem occurs when using the Action actuator and obj.playAction. In version 2.69 there are no problems, the animation works.
incorrect_animation.blend

Animation camera rotation should play a frame from 0 to 10, but the animation stops at 9 frame. The problem occurs when using the Action actuator and obj.playAction. In version 2.69 there are no problems, the animation works. [incorrect_animation.blend](https://archive.blender.org/developer/F242350/incorrect_animation.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @realivan

Added subscriber: @realivan
Author

Removed subscriber: @realivan

Removed subscriber: @realivan
Author

Added subscriber: @realivan

Added subscriber: @realivan

Added subscriber: @sindra1961

Added subscriber: @sindra1961

It seems to be finished in the middle of 9 frames and 10 frames.

It seems to be finished in the middle of 9 frames and 10 frames.
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez

Added subscriber: @you.le

Added subscriber: @you.le

Hi! Bisect told me the first bad commit was : https://developer.blender.org/rB362b25b38287cb75e4d22b30bdbc7f47e8eb3fdf ... But changes has been done since this commit -> after this commit there were two "shift" frames and now only one "shift" frame... So, I'll take a look and Tristan too.

Hi! Bisect told me the first bad commit was : https://developer.blender.org/rB362b25b38287cb75e4d22b30bdbc7f47e8eb3fdf ... But changes has been done since this commit -> after this commit there were two "shift" frames and now only one "shift" frame... So, I'll take a look and Tristan too.

This issue was referenced by 728d1ec504

This issue was referenced by 728d1ec504647f512aeb46d3eb7b15d262d94246

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks to all. Fixing the bug will be in the next version of Blender?

Thanks to all. Fixing the bug will be in the next version of Blender?

@realivan:
You should download the package of the buildbot build version .
The hash number that made it is included in the file name of the package.
If the hash number is newer than the correction that you demand, the correction that you demand is included in that.
You should usually use packages made after the next day of a revised date.

@realivan: You should download the package of the [buildbot build version ](https://builder.blender.org/download/). The hash number that made it is included in the file name of the package. If the hash number is newer than the correction that you demand, the correction that you demand is included in that. You should usually use packages made after the next day of a revised date.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46381
No description provided.